src/objects/Email_Reminder_Setting__mdt.object
<CustomObject>
    <description>Email Reminder Setting</description>
    <fields>
        <fullName>Attempt__c</fullName>
        <description>Number of Attempt</description>
        <label>Attempt</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_From_Expiring__c</fullName>
        <description>Day From Expiring</description>
        <label>Days From Expiring</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Email Template Name</description>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Type of email reminder</description>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Expiration</fullName>
                    <default>true</default>
                    <label>Pre-Expiration</label>
                </value>
                <value>
                    <fullName>Post-Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Permit_Credential_Status__c</fullName>
        <description>Expired Permit/Credential Status</description>
        <label>Expired Permit/Credential Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Permit_Credential_SubStatus__c</fullName>
        <description>Expired Permit/Credential SubStatus</description>
        <label>Expired Permit/Credential SubStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                    <default>true</default>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_type__c</fullName>
        <label>Notification type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>What is the notification for?</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permit</fullName>
                    <default>true</default>
                    <label>Permit</label>
                </value>
                <value>
                    <fullName>Credential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <description>Task Subject</description>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Permit_Plan_Review_Credential__c</fullName>
        <description>Type of Permit/Plan Review/Credential</description>
        <label>Type of Permit/Plan Review/Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Reminder Setting</label>
    <listViews>
        <fullName>Email_Reminder</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Type_of_Permit_Plan_Review_Credential__c</columns>
        <columns>Days_From_Expiring__c</columns>
        <columns>Attempt__c</columns>
        <columns>Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>Email Reminder</label>
    </listViews>
    <pluralLabel>Email Reminder Settings</pluralLabel>
</CustomObject>